--- a/package.json
+++ b/package.json
@@ -7,23 +7,32 @@
     "tunnel": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:android": "eas build --platform android --profile production",
+    "build:ios": "eas build --platform ios --profile production",
+    "build:preview": "eas build --platform android --profile preview",
+    "build:dev": "eas build --platform android --profile development",
+    "submit:android": "eas submit --platform android",
+    "submit:ios": "eas submit --platform ios"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "expo": "~54.0.27",
+    "expo": "~54.0.30",
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "^17.0.10",
-    "expo-file-system": "^19.0.20",
+    "expo-constants": "~18.0.12",
+    "expo-file-system": "~19.0.21",
     "expo-media-library": "^18.2.1",
     "expo-sharing": "^14.0.8",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-qrcode-svg": "^6.3.21",
-    "react-native-svg": "^15.15.1",
-    "react-native-view-shot": "^4.0.3"
+    "react-native-svg": "15.12.1",
+    "react-native-view-shot": "^4.0.3",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "prop-types": "^15.8.1"
