--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -35,6 +35,7 @@ jobs:
           expo-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
           eas-version: latest
+          packager: npm
 
       - name: Prebuild (Generate Android Project)
         run: npx expo prebuild --platform android --no-interactive
