--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -28,13 +28,8 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
-      - name: Setup Expo
-        uses: expo/expo-github-action@v8
-        with:
-          expo-version: latest
-          token: ${{ secrets.EXPO_TOKEN }}
-          eas-version: latest
-          packager: npm
+      - name: Install Expo CLI
+        run: npm install -g expo-cli @expo/ngrok
 
       - name: Prebuild (Generate Android Project)
         run: npx expo prebuild --platform android --no-interactive
@@ -45,14 +40,8 @@ jobs:
       - name: Build Android APK
         run: cd android && ./gradlew assembleRelease --no-daemon
 
-      - name: Sign APK (Debug for now)
-        # In a real app, you would sign with a release keystore here.
-        # This will produce an unsigned or debug-signed APK which works fine for testing.
-        run: echo "Build complete"
-
       - name: Upload APK Artifact
         uses: actions/upload-artifact@v4
         with:
           name: app-release
           path: android/app/build/outputs/apk/release/app-release-unsigned.apk
-          # Or app-debug.apk if release fails signing check
