--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -32,7 +32,7 @@ jobs:
         run: npm install -g expo-cli @expo/ngrok
 
       - name: Prebuild (Generate Android Project)
-        run: npx expo prebuild --platform android --no-interactive
+        run: npx expo prebuild --platform android
 
       - name: Make Gradlew Executable
         run: chmod +x android/gradlew
