Build standalone APK without Expo account

--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -20,22 +20,36 @@ jobs:
         with:
           node-version: 18
 
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu'
+          java-version: '17'
+
       - name: Install Dependencies
         run: npm ci
 
-      - name: Setup EAS
-        uses: expo/expo-github-action@v8
-        with:
-          eas-version: latest
-          token: ${{ secrets.EXPO_TOKEN }}
+      - name: Generate Android Project
+        run: npx expo prebuild --platform android --clean
 
-      - name: Build APK with EAS
-        run: eas build --platform android --profile preview --non-interactive --local
+      - name: Bundle JavaScript
+        run: |
+          npx react-native bundle \
+            --platform android \
+            --dev false \
+            --entry-file index.js \
+            --bundle-output android/app/src/main/assets/index.android.bundle \
+            --assets-dest android/app/src/main/res
 
-      - name: Find and Upload APK
+      - name: Make Gradlew Executable
+        run: chmod +x android/gradlew
+
+      - name: Build APK
+        working-directory: android
+        run: ./gradlew assembleRelease --no-daemon -x bundleReleaseJsAndAssets
+
+      - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: app-release
-          path: |
-            *.apk
-            *.aab
+          path: android/app/build/outputs/apk/release/*.apk
