Revert to standard build with increased memory

--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -10,6 +10,9 @@ on:
 jobs:
   build-android:
     runs-on: ubuntu-latest
+    env:
+      NODE_OPTIONS: "--max_old_space_size=4096"
+      GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx4g -Dfile.encoding=UTF-8"
     
     steps:
       - name: Checkout code
@@ -32,24 +35,12 @@ jobs:
       - name: Generate Android Project
         run: npx expo prebuild --platform android --clean
 
-      - name: Create Assets Directory
-        run: mkdir -p android/app/src/main/assets
-
-      - name: Bundle JavaScript with Metro
-        run: |
-          npx expo export:embed \
-            --platform android \
-            --entry-file index.js \
-            --bundle-output android/app/src/main/assets/index.android.bundle \
-            --assets-dest android/app/src/main/res \
-            --dev false
-
       - name: Make Gradlew Executable
         run: chmod +x android/gradlew
 
       - name: Build APK
         working-directory: android
-        run: ./gradlew assembleRelease --no-daemon -x createBundleReleaseJsAndAssets
+        run: ./gradlew assembleRelease --no-daemon
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
