--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-camera": "^17.0.10",
     "expo-constants": "~18.0.12",
     "expo-file-system": "~19.0.21",
+    "expo-linking": "~8.0.11",
     "expo-media-library": "^18.2.1",
     "expo-sharing": "^14.0.8",
     "expo-status-bar": "~3.0.9",
