--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qr-scanner-app",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "main": "index.js",
   "scripts": {
     "start": "expo start",
@@ -23,6 +23,7 @@
     "expo-constants": "~18.0.12",
     "expo-file-system": "~19.0.21",
     "expo-intent-launcher": "~13.0.8",
+    "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
     "expo-media-library": "^18.2.1",
     "expo-sharing": "^14.0.8",
