--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qr-scanner-app",
-  "version": "1.3.6",
+  "version": "1.4.0",
   "main": "index.js",
   "scripts": {
     "start": "expo start",
@@ -19,6 +19,7 @@
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "expo": "~54.0.30",
+    "expo-blur": "~15.0.8",
     "expo-camera": "^17.0.10",
     "expo-constants": "~18.0.12",
     "expo-file-system": "~19.0.21",
