--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qr-scanner-app",
-  "version": "1.6.4",
+  "version": "1.6.5",
   "main": "index.js",
   "scripts": {
     "start": "expo start",
@@ -25,6 +25,7 @@
     "expo-camera": "^17.0.10",
     "expo-constants": "~18.0.12",
     "expo-file-system": "~19.0.21",
+    "expo-haptics": "~14.0.1",
     "expo-intent-launcher": "~13.0.8",
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
