--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qr-scanner-app",
-  "version": "1.6.7",
+  "version": "1.6.8",
   "main": "index.js",
   "scripts": {
     "start": "expo start",
@@ -41,6 +41,7 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "^1.26.20",
     "react-native-qrcode-svg": "^6.3.21",
+    "react-native-reanimated": "~3.16.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-shared-group-preferences": "^1.1.24",
