--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qr-scanner-app",
-  "version": "1.8.0",
+  "version": "1.8.1",
   "main": "index.js",
   "scripts": {
     "start": "expo start",
@@ -24,12 +24,15 @@
     "expo-blur": "~15.0.8",
     "expo-camera": "^17.0.10",
     "expo-constants": "~18.0.12",
+    "expo-crypto": "~14.0.0",
     "expo-file-system": "~19.0.21",
     "expo-haptics": "~14.0.1",
     "expo-intent-launcher": "~13.0.8",
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
+    "expo-location": "~18.0.5",
     "expo-media-library": "^18.2.1",
+    "expo-secure-store": "~14.0.0",
     "expo-sensors": "^15.0.8",
     "expo-sharing": "^14.0.8",
     "expo-status-bar": "~3.0.9",
