--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qr-scanner-app",
-  "version": "1.8.4",
+  "version": "1.8.5",
   "main": "index.js",
   "scripts": {
     "start": "expo start",
@@ -31,7 +31,6 @@
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
     "expo-location": "~18.0.5",
-    "expo-media-library": "^18.2.1",
     "expo-secure-store": "~14.0.0",
     "expo-sensors": "^15.0.8",
     "expo-sharing": "^14.0.8",
@@ -44,6 +43,7 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "^1.26.20",
     "react-native-qrcode-svg": "^6.3.21",
+    "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-shared-group-preferences": "^1.1.24",
