fix: resolve native module mismatch for Expo Go compatibility - Disabled newArchEnabled for Expo Go compatibility - Updated package versions to SDK 54 requirements - Fixed all peer dependency issues - Bumped version to 1.8.9

--- a/eas.json
+++ b/eas.json
@@ -7,9 +7,7 @@
       "developmentClient": true,
       "distribution": "internal",
       "android": {
-        "gradleProperties": {
-          "org.gradle.jvmargs": "-Xmx4096m"
-        }
+        "buildType": "apk"
       },
       "ios": {
         "simulator": true
@@ -25,14 +23,10 @@
       "android": {
         "buildType": "apk"
       },
-      "ios": {
-        "bundleIdentifier": "com.qrcardcreator.app"
-      }
+      "ios": {}
     }
   },
   "submit": {
     "production": {}
   }
 }
-
-
