--- a/app.json
+++ b/app.json
@@ -2,11 +2,11 @@
   "expo": {
     "name": "R8",
     "slug": "qr-card-creator",
-    "version": "1.8.7",
+    "version": "1.8.9",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "dark",
-    "newArchEnabled": true,
+    "newArchEnabled": false,
     "description": "Scan QR codes and create beautiful digital QR cards. Save, share, and manage your QR codes with ease.",
     "splash": {
       "image": "./assets/splash-icon.png",
@@ -30,13 +30,14 @@
       },
       "edgeToEdgeEnabled": true,
       "package": "com.qrcardcreator.app",
-      "versionCode": 15,
+      "versionCode": 16,
       "permissions": [
         "android.permission.CAMERA",
         "android.permission.READ_MEDIA_IMAGES",
         "android.permission.READ_MEDIA_VIDEO",
         "android.permission.WRITE_EXTERNAL_STORAGE",
-        "android.permission.REQUEST_INSTALL_PACKAGES"
+        "android.permission.REQUEST_INSTALL_PACKAGES",
+        "android.permission.RECORD_AUDIO"
       ]
     },
     "web": {
@@ -50,7 +51,14 @@
         {
           "cameraPermission": "We need camera access to scan QR codes."
         }
-      ]
-    ]
+      ],
+      "expo-secure-store",
+      "expo-font"
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "f4399719-0409-477a-b2c6-f17290721dfd"
+      }
+    }
   }
 }
