--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qr-scanner-app",
-  "version": "1.8.7",
+  "version": "1.8.9",
   "main": "index.js",
   "scripts": {
     "start": "expo start",
@@ -24,14 +24,16 @@
     "expo-blur": "~15.0.8",
     "expo-camera": "^17.0.10",
     "expo-constants": "~18.0.12",
-    "expo-crypto": "~14.0.0",
+    "expo-crypto": "~15.0.8",
+    "expo-dev-client": "~6.0.20",
     "expo-file-system": "~19.0.21",
-    "expo-haptics": "~14.0.1",
+    "expo-font": "~14.0.10",
+    "expo-haptics": "~15.0.8",
     "expo-intent-launcher": "~13.0.8",
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
-    "expo-location": "~18.0.5",
-    "expo-secure-store": "~14.0.0",
+    "expo-location": "~19.0.8",
+    "expo-secure-store": "~15.0.8",
     "expo-sensors": "^15.0.8",
     "expo-sharing": "^14.0.8",
     "expo-status-bar": "~3.0.9",
@@ -41,12 +43,11 @@
     "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-maps": "^1.26.20",
+    "react-native-maps": "1.20.1",
     "react-native-qrcode-svg": "^6.3.21",
-    "react-native-reanimated": "^4.2.1",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-shared-group-preferences": "^1.1.24",
     "react-native-svg": "15.12.1",
     "react-native-view-shot": "^4.0.3",
     "react-native-web": "^0.21.0"
