fix(ci): add NODE_ENV=production to fix Metro bundler transform error - Bumped version to 1.8.11

--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -12,6 +12,7 @@ jobs:
   build-android:
     runs-on: ubuntu-latest
     env:
+      NODE_ENV: "production"
       NODE_OPTIONS: "--max_old_space_size=4096"
       GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx4g -Dfile.encoding=UTF-8"
     
